--- a/next/templates/all-in-one-manifest.yaml
+++ b/next/templates/all-in-one-manifest.yaml
@@ -1,22 +1,33 @@
-# all-in-one-manifests.yaml (最終確定版・固定値バージョン)
-
 # -------------------
-# PostgreSQL用 Secret
+# アプリ用Secret (Cookie/Emailパスワード)
 # -------------------
-# 解説: DBのパスワードを安全に管理します。
 apiVersion: v1
 kind: Secret
 metadata:
-  # ★リリース名 `tss-pre` に合わせて名前を統一
-  name: tss-pre-postgresql
-  namespace: tss-pre
+  name: {{ .Release.Name }}-app-secrets
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
+type: Opaque
+stringData:
+  secret-cookie-password: {{ .Values.app.secretEnv.secretCookiePassword | quote }}
+  email-server-password: {{ .Values.app.secretEnv.emailServerPassword | quote }}
+
+---
+# -------------------
+# PostgreSQL用 Secret (DBパスワード)
+# -------------------
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-postgresql
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: postgresql
 type: Opaque
 stringData:
-  # ★キー名は 'password'
-  password: "your-super-secret-password" # ここは実際のDBパスワード
+  password: {{ .Values.postgresql.auth.password | quote }}
 
 ---
 # -------------------------
@@ -25,11 +36,10 @@ stringData:
 apiVersion: v1
 kind: Service
 metadata:
-  # ★リリース名 `tss-pre` に合わせて名前を統一
-  name: tss-pre-postgresql
-  namespace: tss-pre
+  name: {{ .Release.Name }}-postgresql
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: postgresql
 spec:
   type: ClusterIP
@@ -38,7 +48,7 @@ spec:
       port: 5432
       targetPort: 5432
   selector:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: postgresql
 
 ---
@@ -48,41 +58,39 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  # ★リリース名 `tss-pre` に合わせて名前を統一
-  name: tss-pre-postgresql
-  namespace: tss-pre
+  name: {{ .Release.Name }}-postgresql
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: postgresql
 spec:
   replicas: 1
-  serviceName: tss-pre-postgresql
+  serviceName: {{ .Release.Name }}-postgresql
   selector:
     matchLabels:
-      app.kubernetes.io/instance: tss-pre
+      app.kubernetes.io/instance: {{ .Release.Name }}
       app.kubernetes.io/name: postgresql
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: tss-pre
+        app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/name: postgresql
     spec:
       containers:
         - name: postgresql
-          image: "postgres:15"
+          image: {{ .Values.postgresql.image | quote }}
           ports:
             - containerPort: 5432
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: tss-pre-postgresql
+                  name: {{ .Release.Name }}-postgresql
                   key: password
-            # .env.localに合わせてユーザー名とDB名を設定
             - name: POSTGRES_USER
-              value: "user"
+              value: {{ .Values.postgresql.auth.username | quote }}
             - name: POSTGRES_DB
-              value: "mydatabase"
+              value: {{ .Values.postgresql.auth.database | quote }}
           volumeMounts:
             - name: data
               mountPath: /var/lib/postgresql/data
@@ -91,10 +99,10 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: "local-path"
+        storageClassName: {{ .Values.postgresql.storage.storageClassName | quote }}
         resources:
           requests:
-            storage: 1Gi
+            storage: {{ .Values.postgresql.storage.size | quote }}
 
 ---
 # -------------------------
@@ -103,20 +111,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  # ★リリース名 `tss-pre` に合わせて名前を統一
-  name: tss-pre-my-nextjs-app
-  namespace: tss-pre
+  name: {{ .Release.Name }}-my-nextjs-app
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: my-nextjs-app
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type | quote }}
   ports:
     - port: 80
-      targetPort: 3000
+      targetPort: {{ .Values.service.port }}
       name: http
   selector:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: my-nextjs-app
 
 ---
@@ -126,110 +133,113 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tss-pre-my-nextjs-app
-  namespace: tss-pre
+  name: {{ .Release.Name }}-my-nextjs-app
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: my-nextjs-app
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/instance: tss-pre
+      app.kubernetes.io/instance: {{ .Release.Name }}
       app.kubernetes.io/name: my-nextjs-app
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: tss-pre
+        app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/name: my-nextjs-app
     spec:
-
       containers:
         - name: my-nextjs-app
-          image: "rnagashiro/my-nextjs-app:d65b5c1"
-          imagePullPolicy: IfNotPresent
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: 3000
+            - containerPort: {{ .Values.service.port }}
           env:
             # --- データベース接続情報 ---
             - name: PG_USER
-              value: "user" # ★ 'postgres' から '.env.local' の 'user' に修正
+              value: {{ .Values.postgresql.auth.username | quote }}
             - name: PG_DB_NAME
-              value: "mydatabase" # ★ 'postgres' から '.env.local' の 'mydatabase' に修正
+              value: {{ .Values.postgresql.auth.database | quote }}
             - name: PG_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: tss-pre-postgresql
+                  name: {{ .Release.Name }}-postgresql
                   key: password
             - name: DATABASE_URL
-              value: "postgresql://$(PG_USER):$(PG_PASSWORD)@tss-pre-postgresql:5432/$(PG_DB_NAME)?schema=public"
-
-            # --- アプリケーション設定 (固定値) ---
+              value: "postgresql://$(PG_USER):$(PG_PASSWORD)@{{ .Release.Name }}-postgresql:5432/$(PG_DB_NAME)?schema=public"
+            
+            # --- アプリケーション設定 (values.yamlから) ---
             - name: COOKIE_NAME
-              value: "session-infopia"
+              value: {{ .Values.app.env.cookieName | quote }}
             - name: EMAIL_SERVER_USER
-              value: "ainfopiaf6@gmail.com"
+              value: {{ .Values.app.env.emailServerUser | quote }}
             - name: EMAIL_FROM
-              value: "ainfopiaf6@gmail.com"
+              value: {{ .Values.app.env.emailFrom | quote }}
             - name: NEXT_PUBLIC_BASE_URL
-              value: "https://infopia.nqg1t0.com"
-
-            # --- アプリケーション設定 (Secretから) ---
+              value: {{ .Values.app.env.nextPublicBaseUrl | quote }}
+              
+            # --- アプリケーション設定 (app-secretsから) ---
             - name: SECRET_COOKIE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: my-app-secrets
+                  name: {{ .Release.Name }}-app-secrets
                   key: secret-cookie-password
             - name: EMAIL_SERVER_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: my-app-secrets
+                  name: {{ .Release.Name }}-app-secrets
                   key: email-server-password
-        - name: prisma-tools
-          image: "rnagashiro/my-nextjs-app:d65b5c1"
-          command: ["/bin/sh", "-c", "tail -f /dev/null"]
-          env:
-            # --- メインアプリと同じDB接続情報を設定 ---
-            - name: PG_USER
-              value: "user"
-            - name: PG_DB_NAME
-              value: "mydatabase"
-            - name: PG_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: tss-pre-postgresql
-                  key: password
-            # DATABASE_URLも同じように設定する
-            - name: DATABASE_URL
-              value: "postgresql://$(PG_USER):$(PG_PASSWORD)@tss-pre-postgresql:5432/$(PG_DB_NAME)?schema=public"
+
 ---
 # -------------------------
 # Ingress
 # -------------------------
+{{- if .Values.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: tss-pre-my-nextjs-app
-  namespace: tss-pre
+  name: {{ .Release.Name }}-my-nextjs-app
+  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/instance: tss-pre
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/name: my-nextjs-app
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: {{ .Values.ingress.className | quote }}
   rules:
-    - host: "infopia.nqg1t0.com"
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
             backend:
               service:
-                name: tss-pre-my-nextjs-app
+                name: {{ $.Release.Name }}-my-nextjs-app
                 port:
                   number: 80
+          {{- end }}
+    {{- end }}
   tls:
+    {{- range .Values.ingress.tls }}
     - hosts:
-        - "infopia.nqg1t0.com"
-      secretName: my-nextjs-app-tls                  
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+{{- end }}
+
+---
+# -------------------------
+# DBマイグレーションJob (ArgoCD PreSyncフック)
+# -------------------------
+{{- if .Values.migration.enabled -}}
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ .Release.Name }}-migrate-job-
