--- a/next/values.yaml
+++ b/next/values.yaml
@@ -1,57 +1,39 @@
-# values.yaml
-# このチャートで使う、変更可能な設定値をここにまとめるんや
-
-replicaCount: 5
+# ------------------------------------
+# CI/CD (GitHub Actions) が自動更新する場所
+# ------------------------------------
 image:
-  repository: rnagashiro/my-nextjs-app # CI/CDがビルドしたDockerイメージのリポジトリ
-  pullPolicy: IfNotPresent
-  # tagはCI/CDパイプライン（GitHub Actions）が自動で書き換えるから、空っぽでもええで
-  tag: "9deb18d"
-service:
-  type: ClusterIP
-  port: 3000 # Next.jsアプリがリッスンするポート
-# ★ アプリケーション用の環境変数を追加
-app:
-  env:
-    cookieName: "session-infopia"
-    emailServerUser: "ainfopiaf6@gmail.com"
-    emailFrom: "ainfopiaf6@gmail.com"
-    # ★ localhostから本番ドメインに変更
-    nextPublicBaseUrl: "https://infopia.nqg1t0.com"
-    secretEnv:
-      secretCookiePassword: "X6AkaVa549jDzArdMNJudPeXTXjnZthc"
-      emailServerPassword: "vvurlxuidngagqae"
-# PostgreSQLの設定も、ここで管理すると便利やで
-postgresql:
-  image: "postgres:15"
-  auth:
-    username: "user"
-    database: "mydabase"
-    password: "password" # CI/CDなどで上書きする
-  storage:
-    size: 1Gi
-    storageClassName: "local-path"
-# Ingress（外部からの入口）の設定
+  repository: rnagashiro/my-nextjs-app
+  tag: "d65b5c1" # ← CIがこのタグを 'a1b2c3d' のように書き換える
+
+# ------------------------------------
+# アプリケーション設定
+# ------------------------------------
+appName: my-nextjs-app
+releaseName: tss-pre
+namespace: tss-pre
+
+# ------------------------------------
+# Ingress 設定
+# ------------------------------------
 ingress:
-  enabled: true
-  className: "nginx"
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    # 他にも必要なアノテーションがあれば、ここに追加してな
-  hosts:
-    - host: infopia.nqg1t0.com # ★アプリ用のドメイン名
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - secretName: my-nextjs-app-tls # ★証明書を保存するSecretの名前
-      hosts:
-        - infopia.nqg1t0.com
-migration:
-  enabled: true
-  # ★ ジョブの具体的な設定を追加
-  image:
-    repository: rnagashiro/my-nextjs-app
-    tagSuffix: "-migrator" # アプリと同じイメージタグを使うのが一般的
-  # ★ 実行するコマンドを設定
-  command: ["npx", "prisma", "migrate", "deploy"]
+  host: "infopia.nqg1t0.com"
+  tlsSecretName: my-nextjs-app-tls
+  clusterIssuer: letsencrypt-prod
+
+# ------------------------------------
+# アプリ本体の固定環境変数
+# ------------------------------------
+appEnv:
+  COOKIE_NAME: "session-infopia"
+  EMAIL_SERVER_USER: "ainfopiaf6@gmail.com"
+  EMAIL_FROM: "ainfopiaf6@gmail.com"
+  NEXT_PUBLIC_BASE_URL: "https://infopia.nqg1t0.com"
+
+# ------------------------------------
+# DB設定 (PostgreSQL)
+# ------------------------------------
+postgresql:
+  user: "user"
+  database: "mydatabase"
+  storageClass: "local-path"
+  storageSize: 1Gi
