じゃんじゃん

--- a/next/values.yaml
+++ b/next/values.yaml
@@ -3,7 +3,9 @@
 # ------------------------------------
 image:
   repository: rnagashiro/my-nextjs-app
-  tag: "ab6422e" # ← CIがこのタグを 'a1b2c3d' のように書き換える
+  pullPolicy: IfNotPresent
+  # ★ CIが '9deb18d' のようなコミットハッシュに書き換える
+  tag: "9deb18d" 
 
 # ------------------------------------
 # アプリケーション設定
@@ -16,24 +18,50 @@ namespace: tss-pre
 # Ingress 設定
 # ------------------------------------
 ingress:
+  enabled: true # Ingressを作成するかどうか
+  className: "nginx"
   host: "infopia.nqg1t0.com"
   tlsSecretName: my-nextjs-app-tls
   clusterIssuer: letsencrypt-prod
 
 # ------------------------------------
-# アプリ本体の固定環境変数
+# アプリ本体 (Deployment) の固定環境変数
 # ------------------------------------
 appEnv:
   COOKIE_NAME: "session-infopia"
   EMAIL_SERVER_USER: "ainfopiaf6@gmail.com"
   EMAIL_FROM: "ainfopiaf6@gmail.com"
   NEXT_PUBLIC_BASE_URL: "https://infopia.nqg1t0.com"
+  
+  # ※ Secretな値は 'templates/secrets.yaml' に固定値で書くか、
+  #    ExternalSecrets 経由で読み込むのがベストプラクティスです。
 
 # ------------------------------------
 # DB設定 (PostgreSQL)
 # ------------------------------------
 postgresql:
   user: "user"
-  database: "mydatabase"
+  database: "mydatabase" # 古いファイルでは 'mydabase' でしたが 'mydatabase' に修正
   storageClass: "local-path"
   storageSize: 1Gi
+  # ※ DBパスワードは 'templates/secrets.yaml' に固定値で書かれています
+
+# ------------------------------------
+# ★★★ エラー修正箇所 ★★★
+# DBマイグレーションJob用設定 (job-migrate.yaml が参照)
+# ------------------------------------
+migration:
+  # 'enabled: true' が存在することで "nil pointer" エラーが解消します
+  enabled: true
+  
+  # CI/CDがビルドする '...-migrator' イメージを正しく参照
+  tagSuffix: "-migrator"
+  
+  # Jobが実行するコマンド
+  command: ["npx", "prisma", "migrate", "deploy"]
+  
+  # ★注意:
+  # 'job-migrate.yaml' テンプレートが、
+  # image.repositoryに .Values.image.repository を、
+  # image.tagに .Values.image.tag を使うように
+  # 書かれている必要があります。
